// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Sheet > Snapshots > matches default snapshot 1`] = `
<button
  aria-controls="radix-«r0»"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  data-testid="sheet-trigger"
  type="button"
>
  Open
</button>
`;

exports[`Sheet > Snapshots > matches disabled state snapshot 1`] = `
<button
  aria-controls="radix-«r3»"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  data-testid="sheet-trigger"
  type="button"
>
  Open
</button>
`;

exports[`Sheet > Snapshots > matches hover state snapshot 1`] = `
<button
  aria-controls="radix-«r6»"
  aria-expanded="false"
  aria-haspopup="dialog"
  data-state="closed"
  data-testid="sheet-trigger"
  type="button"
>
  Open
</button>
`;
